--- a/redux-counter/index.html
+++ b/redux-counter/index.html
@@ -2,10 +2,11 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>First React Application</title>
+	<title>React+Redux Counter Application</title>
 </head>
 <body>
 	<div id="container"></div>
+    <script src="../redux.min.js"></script>
 	<script src="../react.js"></script>
 	<script src="../react-dom.js"></script>
 	<script src="jsx/app.js"></script>
